--- a/gui/styles.css
+++ b/gui/styles.css
@@ -1,3 +1,25 @@
+a:link {
+    color:dimgray;
+    font-size: 17px;
+    font-weight: bold;
+    text-decoration:none;
+}
+
+a:visited {
+    color:aqua;
+    text-decoration:none;
+}
+    
+a:hover {
+    color:darkblue;
+    text-decoration:none;
+    }
+    
+a:active {
+    color:#FFFFFF;
+    text-decoration:none;
+}
+
 .login_panel{
     display: block;
     position: fixed;
@@ -9,6 +31,30 @@
     z-index: 10;
     border-radius: 10px;
     box-shadow: 0 0 5px gray;
+}
+
+.file_panel{
+    display: block;
+    position: fixed;
+    top: 2.5%;
+    left: 5%;
+    width: 90%;
+    height: 95%;
+    background: rgba(255, 255, 255, 0.6);
+    z-index: 10;
+    border-radius: 10px;
+    box-shadow: 0 0 5px gray;
+
+}
+
+.item{
+    display: block;
+    width: 10%;
+    height: 15%;
+    z-index: 20;
+    float: left;
+    margin-left: 40px;
+    margin-bottom: 20px;
 }
 
 .btns input {
