--- a/gui/static/css/styles.css
+++ b/gui/static/css/styles.css
@@ -69,18 +69,85 @@ a:active {
     box-shadow: 0 0 10px gray inset;
 }
 
+.stats_panel{
+    display: block;
+    position: fixed;
+    top: 15%;
+    left: 7%;
+    width: 86%;
+    height: 70%;
+    background: rgba(255, 255, 255, 0.6);
+    z-index: 10;
+    border-radius: 10px;
+    box-shadow: 0 0 10px gray inset;
+}
+
+.usage_panel{
+    display: block;
+    position: fixed;
+    top: 15%;
+    left: 7%;
+    width: 42%;
+    height: 70%;
+    /* background: rgba(255, 255, 255, 0.6); */
+    z-index: 15;
+    /* border-radius: 10px;
+    box-shadow: 0 0 10px gray inset; */
+}
+
 .path_panel{
     display: block;
     position: fixed;
     top: 15.1%;
     left: 7%;
-    width: 35%;
+    width: 40%;
     height: 4.5%;
     background: rgba(226, 226, 226, 0.6);
     z-index: 20;
     border-radius: 5px;
     box-shadow: 0 0 5px gray inset;
 }
+
+.back_panel{
+    display: block;
+    position: fixed;
+    top: 62%;
+    left: 79%;
+    width: 80px;
+    height: 50px;
+    z-index: 20;
+}
+
+.logout_panel{
+    display: block;
+    position: fixed;
+    top: 88%;
+    left: 88%;
+    width: 80px;
+    height: 50px;
+    z-index: 20;
+}
+
+.pie_panel{
+    display: block;
+    position: fixed;
+    top: 88.6%;
+    left: 82%;
+    width: 80px;
+    height: 50px;
+    z-index: 20;
+}
+
+.home_panel{
+    display: block;
+    position: fixed;
+    top: 88.2%;
+    left: 76%;
+    width: 80px;
+    height: 50px;
+    z-index: 20;
+}
+
 
 .folder{
     display: block;
