--- a/gui/static/css/styles.css
+++ b/gui/static/css/styles.css
@@ -157,6 +157,27 @@ a:active {
     z-index: 20;
 }
 
+.dropzone_panel{
+    text-align: center;
+    position: fixed;
+    width: 300px;
+    height: 100px;
+    top: 75%;
+    left: 7%;
+    border: 4px dashed red;
+    border-radius: 10px;
+    z-index: 30;
+}
+
+.boxtitle{
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    color: black;
+    font: bold 2em "Arial", sans-serif;
+    width: 300px;
+    height: 100px;
+}
 
 .folder{
     display: block;
